Funções de pagamento

--- a/ecommerce/Views/Carrinho/Pix.cshtml
+++ b/ecommerce/Views/Carrinho/Pix.cshtml
@@ -30,17 +30,8 @@
             <div class="order-card">
                 <div class="order-title">PEDIDO</div>
 
-                <div class="order-row">
-                    <span>SUBTOTAL DO PEDIDO :</span>
-                    <strong>R$ @Model.Subtotal.ToString("N2")</strong>
-                </div>
-                <div class="order-row">
-                    <span>FRETE :</span>
-                    <strong>R$ @Model.TaxaEntrega.ToString("N2")</strong>
-                </div>
-
                 <div class="order-total">
-                    <span>TOTAL DO PEDIDO :</span>
+                    <span>VALOR DO PEDIDO :</span>
                     <strong>R$ @Model.ValorTotal.ToString("N2")</strong>
                 </div>
 
